--- a/.htaccess
+++ b/.htaccess
@@ -14,6 +14,13 @@
   AddOutputFilterByType DEFLATE font/opentype font/ttf font/eot font/otf
 </IfModule>
 
+# Remove .html extension from URLs
+RewriteEngine On
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME}\.html -f
+RewriteRule ^([^/]+)$ $1.html [L]
+
+
 # Browser caching
 <IfModule mod_expires.c>
   ExpiresActive On
@@ -45,6 +52,13 @@
   ExpiresByType text/x-javascript "access plus 1 month"
 </IfModule>
 
+# Remove .html extension from URLs
+RewriteEngine On
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME}\.html -f
+RewriteRule ^([^/]+)$ $1.html [L]
+
+
 # Enable caching
 <IfModule mod_headers.c>
   <filesMatch "\.(ico|pdf|flv|jpg|jpeg|png|gif|svg|js|css|swf|webp|woff|woff2|ttf|eot)$">
@@ -55,3 +69,10 @@
     Header set Cache-Control "max-age=3600, public, must-revalidate"
   </filesMatch>
 </IfModule>
+
+# Remove .html extension from URLs
+RewriteEngine On
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME}\.html -f
+RewriteRule ^([^/]+)$ $1.html [L]
+
